fixed excessive horizonatal decimal spacing

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,8 @@ audio {
     border-radius: 15px;
     border: 3px solid darkgray;
     background-color: slategray;
-    font-size: 75px;
+    font-size: 60px;
+    letter-spacing: -3px;
     justify-content: end;
     align-items: center;
 }
